--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <a href="#home-section" class="navbar-brand"><img src="images/codrops-removebg-preview.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNab">
-                    <span > <i class="fa fa-bars text-light"></i> </span>
+                    <i class="fa fa-bars text-light"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNab">
                     <ul class="navbar-nav ml-auto">
