--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     
 <header>
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container">
                 <a href="#home-section" class="navbar-brand"><img src="images/codrops-removebg-preview.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNab">
-                    <i class="fa fa-bars text-light"></i>
-                </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNab" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
                 <div class="collapse navbar-collapse" id="navbarNab">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link"href="#">Overview</a></li>
