--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-8">
                         <h1 class="text-white heading ">The cheap, fast way to <br> publish your app</h1>
-                        <p class="text-white title1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatum blanditiis nemo. Sapiente quod quisquam accusantium autem dicta voluptatibus?</p>
+                        <p class="text-white title1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatum blanditiis. Sapiente quod quisquam accusantium autem dicta voluptatibus?</p>
                         <button class="btn btn-bg btn-lg rounded-pill text-white shadow">Purchase Now</button>
                         <button class="btn btn-transparent btn-lg rounded-pill text-white shadow"><i class="fas fa-play"></i> View Video</button>
                     </div>
